--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Movie_App_Backend_Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,8 @@
     "mongoose": "^6.2.8",
     "node-fetch": "^2.6.7",
     "pug": "^3.0.2"
+  },
+  "dependencies": {
+    "nodemon": "^2.0.15"
   }
 }
