--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "pug": "^3.0.2"
   },
   "dependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
+    "sequelize": "^6.17.0"
   }
 }
