--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pug": "^3.0.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
