ADD| web scarpping to project

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
+    "puppeteer": "^13.5.2",
     "sequelize": "^6.17.0"
   }
 }
