--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "i": "^0.3.7",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
+    "npm": "^8.6.0",
     "pg": "^8.7.3",
     "puppeteer": "^13.5.2",
     "sequelize": "^6.17.0"
