--- a/package.json
+++ b/package.json
@@ -18,26 +18,25 @@
     "url": "https://github.com/patryfuentes85/MovieApp_P_R_S/issues"
   },
   "homepage": "https://github.com/patryfuentes85/MovieApp_P_R_S#readme",
-  "devDependencies": {
-  },
   "dependencies": {
-    "node-fetch": "^2.6.7",
-    "pug": "^3.0.2",
-    "mongodb": "^4.4.1",
-    "mongoose": "^6.2.9",
-    "express": "^4.17.3",
-    "dotenv": "^16.0.0",
     "bcrypt": "^5.0.1",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.9",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.7",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "npm": "^8.6.0",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.7.3",
+    "pug": "^3.0.2",
     "puppeteer": "^13.5.2",
     "sequelize": "^6.17.0"
   }
