--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "generate-docs": "jsdoc -c ./jsdoc.json"
   },
   "repository": {
     "type": "git",
@@ -38,6 +39,9 @@
     "pg": "^8.7.3",
     "pug": "^3.0.2",
     "puppeteer": "^13.5.2",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "jsdoc": "^3.6.10"
+  },
+  "devDependencies": {
   }
 }
