--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Movie_App_Backend_Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index.js",
     "dev": "nodemon index.js",
     "generate-docs": "jsdoc -c ./jsdoc.json"
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "i": "^0.3.7",
+    "jsdoc": "^3.6.10",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.9",
@@ -39,9 +40,10 @@
     "pg": "^8.7.3",
     "pug": "^3.0.2",
     "puppeteer": "^13.5.2",
-    "sequelize": "^6.17.0",
-    "jsdoc": "^3.6.10"
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
+    "jest": "^27.5.1",
+    "supertest": "^6.2.2"
   }
 }
