--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "i": "^0.3.7",
+    "jest": "^27.5.1",
     "jsdoc": "^3.6.10",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
