--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "dev": "nodemon index.js",
     "generate-docs": "jsdoc -c ./jsdoc.json"
   },
@@ -36,7 +36,8 @@
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "npm": "^8.6.0",
-    "passport": "^0.5.2",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.7.3",
     "pug": "^3.0.2",
